# neural-network1

./: CMakeLists.txt  Neuron.cpp  Neuron.h  main.cpp  neuralNetwork.cpp  neuralNetwork.h
